public/stylesheet.css
/* ... */
#advanced div input {
    width: 100%;
}

select,
input,
button {
    font-family: "fixedsys", monospace;
    font-size: var(--fontsize-small);
    text-align: left;

    color: var(--dimtext);
    background-color: transparent;

    appearance: none;
    border-radius: 0;
    padding: 0;
    border: none;

    height: var(--fontsize-small);

    cursor: pointer;
}
select {
    width: 100%;
    padding-right: calc(var(--padding) * 2);
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><polygon points="0,0 10,0 5,5" fill="rgb(0, 0, 0)"/></svg>');
    background-repeat: no-repeat;
    background-position: right calc(var(--padding) / 2) bottom;
}
select:hover,
button:hover,
input:hover {
    color: var(--text);
    background-color: var(--block);
}
header button,
search menu button {
    text-decoration: underline;
    text-decoration-thickness: var(--underline);
}
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type="number"] {
    -moz-appearance: textfield;
}
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
    -webkit-appearance: none;
}

.message {
    display: flex;
    text-align: center;
    justify-content: center;

    padding: var(--padding);
    background-color: var(--negative);
}
.message a {
    color: var(--text);
}
.message a:hover {
    color: var(--dimtext);
    background: none;
}
#messages {
    margin: var(--margin) 0 var(--margin) 0;
}

section {
    cursor: pointer;

    display: flex;
    flex-direction: row;

    margin: var(--margin) 0 var(--margin) 0;
    padding: 0 var(--padding) var(--padding) var(--padding);

    border-bottom: var(--padding) solid var(--highlight);
    background-color: var(--background);
}
section:first-of-type {
    margin-top: 0;
}
section:last-of-type {
    margin-bottom: 0;
}
section b {
    font-size: var(--fontsize-large);
    color: var(--text);
}

section .text {
    display: flex;
    align-items: center;
    gap: var(--padding);
    color: var(--dimtext);
    flex-wrap: wrap;
}
section .number {
    font-family: "m04", monospace;
    font-weight: bold;
    color: var(--text);
}
section .percent {
    font-family: "alpha-beta", monospace;
}
section .alcohol,
section .percent {
    font-size: var(--fontsize-small);
}

section .image {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}
section .image img {
    width: var(--image);
}
section .image .text {
    justify-content: center;
    margin-bottom: calc(0.5 * var(--padding));
}

section .metadata {
    flex: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-between;
    margin-left: var(--padding);
}
section .metadata .information {
    display: flex;
    flex-direction: column;
    gap: var(--padding);
}
section .metadata .information .name {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: var(--padding);
    color: var(--dimtext);
}
section .metadata .information .name div {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--padding);
}
section .metadata .information .name img {
    max-height: var(--fontsize-largest);
}
section .metadata .information .category {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
section .metadata .information .country {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: baseline;
    column-gap: var(--padding);
}
section .metadata .information .rating a {
    text-decoration: none;

    display: inline-flex;
    flex-direction: row;
    gap: var(--padding);
    align-items: center;
}
section .metadata .information .rating a:hover {
    background-color: transparent;
    border-bottom: var(--underline) solid var(--green);
}
section .metadata .information .rating .number {
    text-align: end;
    font-size: 11px;
}
section .metadata .information .rating .star {
    font-size: var(--fontsize-largest);
    color: var(--block);
}
section .metadata .information .rating .star.filled {
    color: var(--green);
}
section .metadata .information .description {
    color: var(--dimtext);
    font-size: var(--fontsize-small);
}
section .price {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap-reverse;
    justify-content: space-between;
    align-items: center;

    gap: var(--padding);
    margin: calc(0.5 * var(--padding)) 0 calc(0.5 * var(--padding)) 0;
}
section .price .prices {
    display: flex;
    flex-wrap: wrap;
    gap: var(--padding);
}

.modal {
    cursor: default;
    display: none;
    position: fixed;
    z-index: 999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    backdrop-filter: saturate(0) blur(var(--underline));
}

.detailed {
    position: relative;
    background-color: white;
    padding: var(--padding);
    border-top: var(--padding) solid var(--block);
    border-bottom: var(--padding) solid var(--block);
    display: flex;
    flex-direction: column;
    gap: var(--padding);
}
.detailed .heading {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: nowrap;
    gap: var(--padding);
}
.www {
    height: calc(var(--fontsize-large) - 4px);
}
.detailed .heading .link a {
    display: flex;
    flex-direction: row;
    gap: var(--padding);
    align-items: center;
    justify-content: center;
    align-content: center;

    font-size: var(--fontsize-large);
    color: var(--dimtext);
    line-height: 1.05;
}
.detailed .heading .link a:hover {
    background-color: transparent;
    color: var(--text);
}
/* ... */

